--- a/ceos-4s4l/configs/leaf2.cfg
+++ b/ceos-4s4l/configs/leaf2.cfg
@@ -2,7 +2,8 @@ hostname leaf2
 !
 service routing protocols model multi-agent
 !
-username lfurtado privilege 15 secret 0 Juniper
+username lfurtado privilege 15 secret 0 clab
+username clab privilege 15 secret 0 clab
 !
 ip routing
 ip virtual-router mac-address 00:1c:73:00:00:01
@@ -103,50 +104,48 @@ interface Vxlan1
 router bgp 65102
    router-id 10.255.1.2
    no bgp default ipv4-unicast
-!
+   neighbor SPINE-EVPN peer group
+   neighbor SPINE-EVPN remote-as 65000
+   neighbor SPINE-EVPN update-source Loopback0
+   neighbor SPINE-EVPN ebgp-multihop 3
+   neighbor SPINE-EVPN send-community extended
+   neighbor SPINE-EVPN maximum-routes 12000
    neighbor SPINE-UNDERLAY peer group
    neighbor SPINE-UNDERLAY remote-as 65000
    neighbor SPINE-UNDERLAY send-community
    neighbor SPINE-UNDERLAY maximum-routes 12000
-!
    neighbor 10.0.0.9 peer group SPINE-UNDERLAY
    neighbor 10.0.0.11 peer group SPINE-UNDERLAY
    neighbor 10.0.0.13 peer group SPINE-UNDERLAY
    neighbor 10.0.0.15 peer group SPINE-UNDERLAY
-!
-   neighbor SPINE-EVPN peer group
-   neighbor SPINE-EVPN remote-as 65000
-   neighbor SPINE-EVPN ebgp-multihop 3
-   neighbor SPINE-EVPN update-source Loopback0
-   neighbor SPINE-EVPN send-community extended
-   neighbor SPINE-EVPN maximum-routes 12000
-!
    neighbor 10.255.0.1 peer group SPINE-EVPN
    neighbor 10.255.0.2 peer group SPINE-EVPN
    neighbor 10.255.0.3 peer group SPINE-EVPN
    neighbor 10.255.0.4 peer group SPINE-EVPN
-!
-   address-family ipv4
-      neighbor SPINE-UNDERLAY activate
-      network 10.255.1.2/32
-      network 10.255.2.2/32
-!
-   address-family evpn
-      neighbor SPINE-EVPN activate
-!
+   !
    vlan 10
       rd auto
       route-target both 65000:10100
       redistribute learned
-!
+   !
    vlan 20
       rd auto
       route-target both 65000:10200
       redistribute learned
-!
+   !
+   address-family evpn
+      neighbor SPINE-EVPN activate
+   !
+   address-family ipv4
+      neighbor SPINE-UNDERLAY activate
+      network 10.255.1.2/32
+      network 10.255.2.2/32
+   !
    vrf TENANT1
+      rd 10.255.1.2:10000
       route-target import evpn 65000:10000
       route-target export evpn 65000:10000
+      router-id 10.255.1.2
       redistribute connected
 !
 end
