--- a/ceos-4s4l/configs/leaf4.cfg
+++ b/ceos-4s4l/configs/leaf4.cfg
@@ -2,7 +2,8 @@ hostname leaf4
 !
 service routing protocols model multi-agent
 !
-username lfurtado privilege 15 secret 0 Juniper
+username lfurtado privilege 15 secret 0 clab
+username clab privilege 15 secret 0 clab
 !
 ip routing
 ip virtual-router mac-address 00:1c:73:00:00:01
@@ -87,7 +88,7 @@ interface Vlan10
 !
 interface Vlan20
    vrf TENANT1
-   ip address virtual 192.168.20.1/24
+   ip address virtual 192.168.30.1/24
 !
 interface Vlan4094
    vrf TENANT1
@@ -97,56 +98,54 @@ interface Vxlan1
    vxlan source-interface Loopback1
    vxlan udp-port 4789
    vxlan vlan 10 vni 10100
-   vxlan vlan 20 vni 10200
+   vxlan vlan 20 vni 10300
    vxlan vrf TENANT1 vni 10000
 !
 router bgp 65104
    router-id 10.255.1.4
    no bgp default ipv4-unicast
-!
+   neighbor SPINE-EVPN peer group
+   neighbor SPINE-EVPN remote-as 65000
+   neighbor SPINE-EVPN update-source Loopback0
+   neighbor SPINE-EVPN ebgp-multihop 3
+   neighbor SPINE-EVPN send-community extended
+   neighbor SPINE-EVPN maximum-routes 12000
    neighbor SPINE-UNDERLAY peer group
    neighbor SPINE-UNDERLAY remote-as 65000
    neighbor SPINE-UNDERLAY send-community
    neighbor SPINE-UNDERLAY maximum-routes 12000
-!
    neighbor 10.0.0.25 peer group SPINE-UNDERLAY
    neighbor 10.0.0.27 peer group SPINE-UNDERLAY
    neighbor 10.0.0.29 peer group SPINE-UNDERLAY
    neighbor 10.0.0.31 peer group SPINE-UNDERLAY
-!
-   neighbor SPINE-EVPN peer group
-   neighbor SPINE-EVPN remote-as 65000
-   neighbor SPINE-EVPN ebgp-multihop 3
-   neighbor SPINE-EVPN update-source Loopback0
-   neighbor SPINE-EVPN send-community extended
-   neighbor SPINE-EVPN maximum-routes 12000
-!
    neighbor 10.255.0.1 peer group SPINE-EVPN
    neighbor 10.255.0.2 peer group SPINE-EVPN
    neighbor 10.255.0.3 peer group SPINE-EVPN
    neighbor 10.255.0.4 peer group SPINE-EVPN
-!
-   address-family ipv4
-      neighbor SPINE-UNDERLAY activate
-      network 10.255.1.4/32
-      network 10.255.2.4/32
-!
-   address-family evpn
-      neighbor SPINE-EVPN activate
-!
+   !
    vlan 10
       rd auto
       route-target both 65000:10100
       redistribute learned
-!
+   !
    vlan 20
       rd auto
-      route-target both 65000:10200
+      route-target both 65000:10300
       redistribute learned
-!
+   !
+   address-family evpn
+      neighbor SPINE-EVPN activate
+   !
+   address-family ipv4
+      neighbor SPINE-UNDERLAY activate
+      network 10.255.1.4/32
+      network 10.255.2.4/32
+   !
    vrf TENANT1
+      rd 10.255.1.4:10000
       route-target import evpn 65000:10000
       route-target export evpn 65000:10000
+      router-id 10.255.1.4
       redistribute connected
 !
 end
