--- a/ceos-2dc-4s4l/configs/dc1-router2.cfg
+++ b/ceos-2dc-4s4l/configs/dc1-router2.cfg
@@ -1,27 +1,32 @@
-hostname dc1-router2
+! Command: show running-config
+! device: dc1-router2 (cEOSLab, EOS-4.35.1F-45295350.4351F.1 (engineering build))
+!
+no aaa root
+!
+username clab privilege 15 secret sha512 $6$7bv5W1JT.W.axH72$1HY/lyblS5fIFptbUua89VxCH5W2Lm7b8S2.4Rw4b29FI.HtKzmABmKEfqOQekljgJZdOwm5b9Bd7nOleE0b0/
+username lfurtado privilege 15 secret sha512 $6$xNWtA710MKDFycjQ$A3Wb4aT7m7eX2TkrASlKfZwS1Y0OaWRBIC/0CE6zvbMRzYQvVeDg.GBESWShttH.7lwQsdzNPwPhI6lcv8Wwj/
+!
+no service interface inactive port-id allocation disabled
 !
 service routing protocols model multi-agent
-username lfurtado privilege 15 secret 0 Juniper
-username clab privilege 15 secret 0 clab
 !
-ip routing
+hostname dc1-router2
+!
+spanning-tree mode mstp
+!
+system l1
+   unsupported speed action error
+   unsupported error-correction action error
+!
+vlan 10,20,30,4094
+!
 vrf instance TENANT1
-ip routing vrf TENANT1
-!
-vlan 10
-vlan 20
-vlan 30
-vlan 4094
-!
-interface Loopback0
-   ip address 10.1.254.22/32
-interface Loopback1
-   ip address 10.1.255.22/32
 !
 interface Ethernet1
    description to-dc1-spine1
    no switchport
    ip address 10.1.0.36/31
+!
 interface Ethernet2
    description to-dc1-spine3
    no switchport
@@ -31,8 +36,18 @@ interface Ethernet3
    description WAN to-dc2-router2
    no switchport
    ip address 172.16.0.2/31
-   mpls ip
    mpls ldp interface
+!
+interface Loopback0
+   ip address 10.1.254.22/32
+   mpls ldp interface
+!
+interface Loopback1
+   ip address 10.1.255.22/32
+!
+interface Management0
+   ip address 172.20.20.19/24
+   ipv6 address 3fff:172:20:20::13/64
 !
 interface Vlan4094
    vrf TENANT1
@@ -46,71 +61,89 @@ interface Vxlan1
    vxlan vlan 30 vni 10300
    vxlan vrf TENANT1 vni 10000
 !
+ip routing
+ip routing vrf TENANT1
+!
 mpls ip
+!
 mpls ldp
    router-id interface Loopback0
    transport-address interface Loopback0
    interface disabled default
    no shutdown
 !
-router ospf 100
-   router-id 10.1.254.22
-   network 172.16.0.2/31 area 0.0.0.0
-   network 10.1.254.22/32 area 0.0.0.0
-!
 router bgp 65152
    router-id 10.1.254.22
-   bgp bestpath d-path
    no bgp default ipv4-unicast
+   bgp bestpath d-path
+   neighbor DC1-EVPN peer group
+   neighbor DC1-EVPN remote-as 65001
+   neighbor DC1-EVPN update-source Loopback0
+   neighbor DC1-EVPN ebgp-multihop 3
+   neighbor DC1-EVPN send-community extended
+   neighbor DC1-EVPN maximum-routes 12000
    neighbor DC1-UNDERLAY peer group
    neighbor DC1-UNDERLAY remote-as 65001
    neighbor DC1-UNDERLAY send-community
    neighbor DC1-UNDERLAY maximum-routes 12000
-   neighbor 10.1.0.37 peer group DC1-UNDERLAY
-   neighbor 10.1.0.39 peer group DC1-UNDERLAY
-   neighbor DC1-EVPN peer group
-   neighbor DC1-EVPN remote-as 65001
-   neighbor DC1-EVPN ebgp-multihop 3
-   neighbor DC1-EVPN update-source Loopback0
-   neighbor DC1-EVPN send-community extended
-   neighbor DC1-EVPN maximum-routes 12000
-   neighbor 10.1.254.1 peer group DC1-EVPN
-   neighbor 10.1.254.3 peer group DC1-EVPN
    neighbor WAN-EVPN peer group
    neighbor WAN-EVPN remote-as 65252
+   neighbor WAN-EVPN next-hop-self
    neighbor WAN-EVPN update-source Loopback0
    neighbor WAN-EVPN ebgp-multihop 5
    neighbor WAN-EVPN send-community extended
    neighbor WAN-EVPN maximum-routes 12000
+   neighbor 10.1.0.37 peer group DC1-UNDERLAY
+   neighbor 10.1.0.39 peer group DC1-UNDERLAY
+   neighbor 10.1.254.1 peer group DC1-EVPN
+   neighbor 10.1.254.3 peer group DC1-EVPN
    neighbor 10.2.254.22 peer group WAN-EVPN
-   address-family ipv4
-      neighbor DC1-UNDERLAY activate
-      network 10.1.254.22/32
-      network 10.1.255.22/32
-   address-family evpn
-      neighbor DC1-EVPN activate
-      neighbor WAN-EVPN activate
-      neighbor WAN-EVPN domain remote
-      neighbor WAN-EVPN encapsulation mpls
-      neighbor WAN-EVPN next-hop-self
-      domain identifier 1:1
-      domain identifier 2:2 remote
+   !
    vlan 10
       rd evpn domain all 10.1.254.22:10
       route-target both 65000:10100
       route-target import export evpn domain remote 65000:10100
       redistribute learned
+   !
    vlan 20
       rd evpn domain all 10.1.254.22:20
       route-target both 65001:10200
       redistribute learned
+   !
    vlan 30
       rd evpn domain all 10.1.254.22:30
       route-target both 65001:10300
       redistribute learned
+   !
+   address-family evpn
+      neighbor DC1-EVPN activate
+      neighbor WAN-EVPN activate
+      neighbor WAN-EVPN encapsulation mpls 
+      neighbor WAN-EVPN domain remote
+   !
+   address-family ipv4
+      neighbor DC1-UNDERLAY activate
+      network 10.1.254.22/32
+      network 10.1.255.22/32
+   !
    vrf TENANT1
       route-target import evpn 65000:10000
+      route-target import evpn domain remote 65000:10000
       route-target export evpn 65000:10000
+      route-target export evpn domain remote 65000:10000
       redistribute connected
+!
+router multicast
+   ipv4
+      software-forwarding kernel
+   !
+   ipv6
+      software-forwarding kernel
+!
+router ospf 100
+   router-id 10.1.254.22
+   network 10.1.254.22/32 area 0.0.0.0
+   network 172.16.0.2/31 area 0.0.0.0
+   max-lsa 12000
 !
 end
