--- a/ceos-2dc-4s4l/configs/dc1-spine1.cfg
+++ b/ceos-2dc-4s4l/configs/dc1-spine1.cfg
@@ -1,47 +1,74 @@
-hostname dc1-spine1
+! Command: show running-config
+! device: dc1-spine1 (cEOSLab, EOS-4.35.1F-45295350.4351F.1 (engineering build))
+!
+no aaa root
+!
+username clab privilege 15 secret sha512 $6$WpPjuHXF485n3LiA$iJIneDCuNI2hCBJ4qv8s.bi1WxMlmlTUBxsrEbHSVRAi6pnTcIN4YFX0xU.Vf7enQtXXA8cTd8FQe8q5cZH/z.
+username lfurtado privilege 15 secret sha512 $6$GAwZeVT4od0slMVU$M5WAbJDKrTsv9zQGS6eIgE5VMJuTG.SkPIeBNxEV/2kd2wWyb7YJYqMgCsmbiBZ.PXbRAblZke0F7EWilMWwe.
+!
+no service interface inactive port-id allocation disabled
 !
 service routing protocols model multi-agent
-username lfurtado privilege 15 secret 0 Juniper
-username clab privilege 15 secret 0 clab
 !
-ip routing
+hostname dc1-spine1
 !
-interface Loopback0
-   ip address 10.1.254.1/32
+spanning-tree mode mstp
+!
+system l1
+   unsupported speed action error
+   unsupported error-correction action error
 !
 interface Ethernet1
    description to-dc1-leaf1
    no switchport
    ip address 10.1.0.1/31
+!
 interface Ethernet2
    description to-dc1-leaf2
    no switchport
    ip address 10.1.0.9/31
+!
 interface Ethernet3
    description to-dc1-leaf3
    no switchport
    ip address 10.1.0.17/31
+!
 interface Ethernet4
    description to-dc1-leaf4
    no switchport
    ip address 10.1.0.25/31
+!
 interface Ethernet5
    description to-dc1-router1
    no switchport
    ip address 10.1.0.33/31
+!
 interface Ethernet6
    description to-dc1-router2
    no switchport
    ip address 10.1.0.37/31
 !
+interface Loopback0
+   ip address 10.1.254.1/32
+!
+interface Management0
+   ip address 172.20.20.29/24
+   ipv6 address 3fff:172:20:20::1d/64
+!
+ip routing
+!
 router bgp 65001
    router-id 10.1.254.1
    no bgp default ipv4-unicast
-   !
+   neighbor DC1-EVPN peer group
+   neighbor DC1-EVPN next-hop-unchanged
+   neighbor DC1-EVPN update-source Loopback0
+   neighbor DC1-EVPN ebgp-multihop 3
+   neighbor DC1-EVPN send-community extended
+   neighbor DC1-EVPN maximum-routes 12000
    neighbor DC1-UNDERLAY peer group
    neighbor DC1-UNDERLAY send-community
    neighbor DC1-UNDERLAY maximum-routes 12000
-   !
    neighbor 10.1.0.0 peer group DC1-UNDERLAY
    neighbor 10.1.0.0 remote-as 65101
    neighbor 10.1.0.8 peer group DC1-UNDERLAY
@@ -54,14 +81,6 @@ router bgp 65001
    neighbor 10.1.0.32 remote-as 65151
    neighbor 10.1.0.36 peer group DC1-UNDERLAY
    neighbor 10.1.0.36 remote-as 65152
-   !
-   neighbor DC1-EVPN peer group
-   neighbor DC1-EVPN ebgp-multihop 3
-   neighbor DC1-EVPN update-source Loopback0
-   neighbor DC1-EVPN send-community extended
-   neighbor DC1-EVPN next-hop-unchanged
-   neighbor DC1-EVPN maximum-routes 12000
-   !
    neighbor 10.1.254.11 peer group DC1-EVPN
    neighbor 10.1.254.11 remote-as 65101
    neighbor 10.1.254.12 peer group DC1-EVPN
@@ -75,10 +94,18 @@ router bgp 65001
    neighbor 10.1.254.22 peer group DC1-EVPN
    neighbor 10.1.254.22 remote-as 65152
    !
+   address-family evpn
+      neighbor DC1-EVPN activate
+   !
    address-family ipv4
       neighbor DC1-UNDERLAY activate
       network 10.1.254.1/32
-   address-family evpn
-      neighbor DC1-EVPN activate
+!
+router multicast
+   ipv4
+      software-forwarding kernel
+   !
+   ipv6
+      software-forwarding kernel
 !
 end
