--- a/ceos-2dc-4s4l/configs/dc1-spine3.cfg
+++ b/ceos-2dc-4s4l/configs/dc1-spine3.cfg
@@ -1,42 +1,71 @@
-hostname dc1-spine3
+! Command: show running-config
+! device: dc1-spine3 (cEOSLab, EOS-4.35.1F-45295350.4351F.1 (engineering build))
+!
+no aaa root
+!
+username clab privilege 15 secret sha512 $6$HjZANxZuiq/RP0iJ$HpL2RAAZNFKaDU4kwhGKBpRXVh9rXgbSSDUXsA.EYLGJmUPWsG/FBfVjP7J/3VV5.Y.OG3XO4ylOtBKOUB9MT1
+username lfurtado privilege 15 secret sha512 $6$PqOtm9RboypuIk./$XPckYhHgfy3ZLj9zerinAegJAZzKQypWjtjJ1E5SEpewyTZVLN0YFuzX.ouGknqx0.wBbrfLgDEL9LgN9Ddxs.
+!
+no service interface inactive port-id allocation disabled
 !
 service routing protocols model multi-agent
-username lfurtado privilege 15 secret 0 Juniper
-username clab privilege 15 secret 0 clab
 !
-ip routing
+hostname dc1-spine3
 !
-interface Loopback0
-   ip address 10.1.254.3/32
+spanning-tree mode mstp
+!
+system l1
+   unsupported speed action error
+   unsupported error-correction action error
 !
 interface Ethernet1
    description to-dc1-leaf1
    no switchport
    ip address 10.1.0.5/31
+!
 interface Ethernet2
    description to-dc1-leaf2
    no switchport
    ip address 10.1.0.13/31
+!
 interface Ethernet3
    description to-dc1-leaf3
    no switchport
    ip address 10.1.0.21/31
+!
 interface Ethernet4
    description to-dc1-leaf4
    no switchport
    ip address 10.1.0.29/31
+!
 interface Ethernet5
    description to-dc1-router1
    no switchport
    ip address 10.1.0.35/31
+!
 interface Ethernet6
    description to-dc1-router2
    no switchport
    ip address 10.1.0.39/31
 !
+interface Loopback0
+   ip address 10.1.254.3/32
+!
+interface Management0
+   ip address 172.20.20.10/24
+   ipv6 address 3fff:172:20:20::a/64
+!
+ip routing
+!
 router bgp 65001
    router-id 10.1.254.3
    no bgp default ipv4-unicast
+   neighbor DC1-EVPN peer group
+   neighbor DC1-EVPN next-hop-unchanged
+   neighbor DC1-EVPN update-source Loopback0
+   neighbor DC1-EVPN ebgp-multihop 3
+   neighbor DC1-EVPN send-community extended
+   neighbor DC1-EVPN maximum-routes 12000
    neighbor DC1-UNDERLAY peer group
    neighbor DC1-UNDERLAY send-community
    neighbor DC1-UNDERLAY maximum-routes 12000
@@ -52,12 +81,6 @@ router bgp 65001
    neighbor 10.1.0.34 remote-as 65151
    neighbor 10.1.0.38 peer group DC1-UNDERLAY
    neighbor 10.1.0.38 remote-as 65152
-   neighbor DC1-EVPN peer group
-   neighbor DC1-EVPN ebgp-multihop 3
-   neighbor DC1-EVPN update-source Loopback0
-   neighbor DC1-EVPN send-community extended
-   neighbor DC1-EVPN next-hop-unchanged
-   neighbor DC1-EVPN maximum-routes 12000
    neighbor 10.1.254.11 peer group DC1-EVPN
    neighbor 10.1.254.11 remote-as 65101
    neighbor 10.1.254.12 peer group DC1-EVPN
@@ -70,10 +93,19 @@ router bgp 65001
    neighbor 10.1.254.21 remote-as 65151
    neighbor 10.1.254.22 peer group DC1-EVPN
    neighbor 10.1.254.22 remote-as 65152
+   !
+   address-family evpn
+      neighbor DC1-EVPN activate
+   !
    address-family ipv4
       neighbor DC1-UNDERLAY activate
       network 10.1.254.3/32
-   address-family evpn
-      neighbor DC1-EVPN activate
+!
+router multicast
+   ipv4
+      software-forwarding kernel
+   !
+   ipv6
+      software-forwarding kernel
 !
 end
