--- a/ceos-2dc-4s4l/configs/dc2-leaf1.cfg
+++ b/ceos-2dc-4s4l/configs/dc2-leaf1.cfg
@@ -1,41 +1,72 @@
-hostname dc2-leaf1
+! Command: show running-config
+! device: dc2-leaf1 (cEOSLab, EOS-4.35.1F-45295350.4351F.1 (engineering build))
+!
+no aaa root
+!
+username clab privilege 15 secret sha512 $6$gsCCsD3ZoHHeCAXD$VQLCAE/ONfwjSWbjK8MzrMtprZFn.Eu5mw1jvoWW9LuQt1frzwTN8Qw0ICC3q6zbFH6QhYYo080TrIY4acsko1
+username lfurtado privilege 15 secret sha512 $6$q.UD/nN1/XhwaMK/$uxSRtGehPx8hK.AsulObgbZ4wVoJrPFO7QSQHQhVObAQsVAE.3MFzaSBk22VIhZ7wKDbjhG1Mvf3AKXH4FSEK1
+!
+no service interface inactive port-id allocation disabled
 !
 service routing protocols model multi-agent
-username lfurtado privilege 15 secret 0 Juniper
-username clab privilege 15 secret 0 clab
 !
-ip routing
-ip virtual-router mac-address 00:1c:73:00:00:01
+hostname dc2-leaf1
 !
-vrf instance TENANT1
-ip routing vrf TENANT1
+spanning-tree mode mstp
+!
+system l1
+   unsupported speed action error
+   unsupported error-correction action error
 !
 vlan 10
    name DC_GLOBAL_VLAN10
+!
 vlan 20
    name DC2_VLAN20
+!
 vlan 30
    name DC2_VLAN30
+!
 vlan 4094
    name TENANT1_L3VNI
 !
-interface Loopback0
-   ip address 10.2.254.11/32
-interface Loopback1
-   ip address 10.2.255.11/32
+vrf instance TENANT1
+!
+interface Port-Channel11
+   description ESI-LAG to-dc2-host1 on dc2-leaf1/dc2-leaf2
+   switchport trunk allowed vlan 10,20
+   switchport mode trunk
+   !
+   evpn ethernet-segment
+      identifier 0000:0000:0000:1011:1111
+      route-target import 00:00:00:21:11:11
+   lacp system-id 0000.1011.1111
+!
+interface Port-Channel12
+   description ESI-LAG to-dc2-host2 on dc2-leaf1/dc2-leaf2
+   switchport trunk allowed vlan 10,30
+   switchport mode trunk
+   !
+   evpn ethernet-segment
+      identifier 0000:0000:0000:1012:2222
+      route-target import 00:00:00:21:22:22
+   lacp system-id 0000.1012.2222
 !
 interface Ethernet1
    description to-dc2-spine1
    no switchport
    ip address 10.2.0.0/31
+!
 interface Ethernet2
    description to-dc2-spine2
    no switchport
    ip address 10.2.0.2/31
+!
 interface Ethernet3
    description to-dc2-spine3
    no switchport
    ip address 10.2.0.4/31
+!
 interface Ethernet4
    description to-dc2-spine4
    no switchport
@@ -44,39 +75,35 @@ interface Ethernet4
 interface Ethernet5
    description to-dc2-host1
    channel-group 11 mode active
+!
 interface Ethernet6
    description to-dc2-host2
    channel-group 12 mode active
 !
-interface Port-Channel11
-   description ESI-LAG to-dc2-host1 on dc2-leaf1/dc2-leaf2
-   switchport
-   switchport mode trunk
-   switchport trunk allowed vlan 10,20
-   evpn ethernet-segment
-      identifier 0000:0000:0000:1011:1111
-      route-target import 00:00:00:21:11:11
-   lacp system-id 0000.1011.1111
+interface Ethernet7
 !
-interface Port-Channel12
-   description ESI-LAG to-dc2-host2 on dc2-leaf1/dc2-leaf2
-   switchport
-   switchport mode trunk
-   switchport trunk allowed vlan 10,30
-   evpn ethernet-segment
-      identifier 0000:0000:0000:1012:2222
-      route-target import 00:00:00:21:22:22
-   lacp system-id 0000.1012.2222
+interface Loopback0
+   ip address 10.2.254.11/32
+!
+interface Loopback1
+   ip address 10.2.255.11/32
+!
+interface Management0
+   ip address 172.20.20.18/24
+   ipv6 address 3fff:172:20:20::12/64
 !
 interface Vlan10
    vrf TENANT1
    ip address virtual 192.168.10.1/24
+!
 interface Vlan20
    vrf TENANT1
    ip address virtual 192.168.120.1/24
+!
 interface Vlan30
    vrf TENANT1
    ip address virtual 192.168.130.1/24
+!
 interface Vlan4094
    vrf TENANT1
    ip address 10.2.10.11/32
@@ -89,9 +116,20 @@ interface Vxlan1
    vxlan vlan 30 vni 10300
    vxlan vrf TENANT1 vni 10000
 !
+ip virtual-router mac-address 00:1c:73:00:00:01
+!
+ip routing
+ip routing vrf TENANT1
+!
 router bgp 65201
    router-id 10.2.254.11
    no bgp default ipv4-unicast
+   neighbor SPINE-EVPN peer group
+   neighbor SPINE-EVPN remote-as 65002
+   neighbor SPINE-EVPN update-source Loopback0
+   neighbor SPINE-EVPN ebgp-multihop 3
+   neighbor SPINE-EVPN send-community extended
+   neighbor SPINE-EVPN maximum-routes 12000
    neighbor SPINE-UNDERLAY peer group
    neighbor SPINE-UNDERLAY remote-as 65002
    neighbor SPINE-UNDERLAY send-community
@@ -100,37 +138,46 @@ router bgp 65201
    neighbor 10.2.0.3 peer group SPINE-UNDERLAY
    neighbor 10.2.0.5 peer group SPINE-UNDERLAY
    neighbor 10.2.0.7 peer group SPINE-UNDERLAY
-   neighbor SPINE-EVPN peer group
-   neighbor SPINE-EVPN remote-as 65002
-   neighbor SPINE-EVPN ebgp-multihop 3
-   neighbor SPINE-EVPN update-source Loopback0
-   neighbor SPINE-EVPN send-community extended
-   neighbor SPINE-EVPN maximum-routes 12000
    neighbor 10.2.254.1 peer group SPINE-EVPN
    neighbor 10.2.254.2 peer group SPINE-EVPN
    neighbor 10.2.254.3 peer group SPINE-EVPN
    neighbor 10.2.254.4 peer group SPINE-EVPN
-   address-family ipv4
-      neighbor SPINE-UNDERLAY activate
-      network 10.2.254.11/32
-      network 10.2.255.11/32
-   address-family evpn
-      neighbor SPINE-EVPN activate
+   !
    vlan 10
       rd auto
       route-target both 65000:10100
       redistribute learned
+   !
    vlan 20
       rd auto
       route-target both 65002:10200
       redistribute learned
+   !
    vlan 30
       rd auto
       route-target both 65002:10300
       redistribute learned
+   !
+   address-family evpn
+      neighbor SPINE-EVPN activate
+   !
+   address-family ipv4
+      neighbor SPINE-UNDERLAY activate
+      network 10.2.254.11/32
+      network 10.2.255.11/32
+   !
    vrf TENANT1
+      rd 10.2.255.11:10000
       route-target import evpn 65000:10000
       route-target export evpn 65000:10000
+      router-id 10.2.255.11
       redistribute connected
+!
+router multicast
+   ipv4
+      software-forwarding kernel
+   !
+   ipv6
+      software-forwarding kernel
 !
 end
