Reordered MPLS LDP configuration due to a possible startup loading bug

--- a/ceos-2dc-4s4l/configs/dc2-router1.cfg
+++ b/ceos-2dc-4s4l/configs/dc2-router1.cfg
@@ -72,6 +72,10 @@ mpls ldp
    interface disabled default
    no shutdown
 !
+interface Loopback0
+   ip address 10.2.254.21/32
+   mpls ldp interface
+!
 router bgp 65251
    router-id 10.2.254.21
    no bgp default ipv4-unicast
