--- a/ceos-2dc-4s4l/configs/dc1-router2.cfg
+++ b/ceos-2dc-4s4l/configs/dc1-router2.cfg
@@ -20,6 +20,18 @@ system l1
 !
 vlan 10,20,30,4094
 !
+interface Vlan10
+   no autostate
+!
+interface Vlan20
+   no autostate
+!
+interface Vlan30
+   no autostate
+!
+interface Vlan4094
+   no autostate
+!
 vrf instance TENANT1
 !
 interface Ethernet1
