Fixed MTU values in both DCs

--- a/ceos-2dc-4s4l/configs/dc1-leaf4.cfg
+++ b/ceos-2dc-4s4l/configs/dc1-leaf4.cfg
@@ -43,21 +43,25 @@ interface Port-Channel14
    lacp system-id 0000.0014.4444
 !
 interface Ethernet1
+   mtu 9214
    description to-dc1-spine1
    no switchport
    ip address 10.1.0.24/31
 !
 interface Ethernet2
+   mtu 9214
    description to-dc1-spine2
    no switchport
    ip address 10.1.0.26/31
 !
 interface Ethernet3
+   mtu 9214
    description to-dc1-spine3
    no switchport
    ip address 10.1.0.28/31
 !
 interface Ethernet4
+   mtu 9214
    description to-dc1-spine4
    no switchport
    ip address 10.1.0.30/31
@@ -83,14 +87,17 @@ interface Management0
    ipv6 address 3fff:172:20:20::3/64
 !
 interface Vlan10
+   mtu 9000
    vrf TENANT1
    ip address virtual 192.168.10.1/24
 !
 interface Vlan20
+   mtu 9000
    vrf TENANT1
    ip address virtual 192.168.20.1/24
 !
 interface Vlan30
+   mtu 9000
    vrf TENANT1
    ip address virtual 192.168.30.1/24
 !
