--- a/ceos-2dc-4s4l/configs/dc2-spine3.cfg
+++ b/ceos-2dc-4s4l/configs/dc2-spine3.cfg
@@ -19,31 +19,37 @@ system l1
    unsupported error-correction action error
 !
 interface Ethernet1
+   mtu 9214
    description to-dc2-leaf1
    no switchport
    ip address 10.2.0.5/31
 !
 interface Ethernet2
+   mtu 9214
    description to-dc2-leaf2
    no switchport
    ip address 10.2.0.13/31
 !
 interface Ethernet3
+   mtu 9214
    description to-dc2-leaf3
    no switchport
    ip address 10.2.0.21/31
 !
 interface Ethernet4
+   mtu 9214
    description to-dc2-leaf4
    no switchport
    ip address 10.2.0.29/31
 !
 interface Ethernet5
+   mtu 9214
    description to-dc2-router1
    no switchport
    ip address 10.2.0.35/31
 !
 interface Ethernet6
+   mtu 9214
    description to-dc2-router2
    no switchport
    ip address 10.2.0.39/31
