--- a/ceos-2dc-4s4l/configs/dc1-leaf1.cfg
+++ b/ceos-2dc-4s4l/configs/dc1-leaf1.cfg
@@ -53,21 +53,25 @@ interface Port-Channel12
    lacp system-id 0000.0012.2222
 !
 interface Ethernet1
+   mtu 9214
    description to-dc1-spine1
    no switchport
    ip address 10.1.0.0/31
 !
 interface Ethernet2
+   mtu 9214
    description to-dc1-spine2
    no switchport
    ip address 10.1.0.2/31
 !
 interface Ethernet3
+   mtu 9214
    description to-dc1-spine3
    no switchport
    ip address 10.1.0.4/31
 !
 interface Ethernet4
+   mtu 9214 
    description to-dc1-spine4
    no switchport
    ip address 10.1.0.6/31
@@ -93,14 +97,17 @@ interface Management0
    ipv6 address 3fff:172:20:20::9/64
 !
 interface Vlan10
+   mtu 9000
    vrf TENANT1
    ip address virtual 192.168.10.1/24
 !
 interface Vlan20
+   mtu 9000
    vrf TENANT1
    ip address virtual 192.168.20.1/24
 !
 interface Vlan30
+   mtu 9000
    vrf TENANT1
    ip address virtual 192.168.30.1/24
 !
