--- a/ceos-2dc-4s4l/configs/dc1-router2.cfg
+++ b/ceos-2dc-4s4l/configs/dc1-router2.cfg
@@ -21,12 +21,15 @@ system l1
 vlan 10,20,30,4094
 !
 interface Vlan10
+   mtu 9000
    no autostate
 !
 interface Vlan20
+   mtu 9000
    no autostate
 !
 interface Vlan30
+   mtu 9000
    no autostate
 !
 interface Vlan4094
@@ -35,16 +38,19 @@ interface Vlan4094
 vrf instance TENANT1
 !
 interface Ethernet1
+   mtu 9214
    description to-dc1-spine1
    no switchport
    ip address 10.1.0.36/31
 !
 interface Ethernet2
+   mtu 9214
    description to-dc1-spine3
    no switchport
    ip address 10.1.0.38/31
 !
 interface Ethernet3
+   mtu 9214
    description WAN to-dc2-router2
    no switchport
    ip address 172.16.0.2/31
