--- a/ceos-2dc-4s4l/configs/dc1-spine2.cfg
+++ b/ceos-2dc-4s4l/configs/dc1-spine2.cfg
@@ -19,21 +19,25 @@ system l1
    unsupported error-correction action error
 !
 interface Ethernet1
+   mtu 9214
    description to-dc1-leaf1
    no switchport
    ip address 10.1.0.3/31
 !
 interface Ethernet2
+   mtu 9214
    description to-dc1-leaf2
    no switchport
    ip address 10.1.0.11/31
 !
 interface Ethernet3
+   mtu 9214
    description to-dc1-leaf3
    no switchport
    ip address 10.1.0.19/31
 !
 interface Ethernet4
+   mtu 9214
    description to-dc1-leaf4
    no switchport
    ip address 10.1.0.27/31
