--- a/ceos-2dc-4s4l/configs/dc2-leaf2.cfg
+++ b/ceos-2dc-4s4l/configs/dc2-leaf2.cfg
@@ -43,21 +43,25 @@ interface Port-Channel12
    lacp system-id 0000.1012.2222
 !
 interface Ethernet1
+   mtu 9214
    description to-dc2-spine1
    no switchport
    ip address 10.2.0.8/31
 !
 interface Ethernet2
+   mtu 9214
    description to-dc2-spine2
    no switchport
    ip address 10.2.0.10/31
 !
 interface Ethernet3
+   mtu 9214
    description to-dc2-spine3
    no switchport
    ip address 10.2.0.12/31
 !
 interface Ethernet4
+   mtu 9214
    description to-dc2-spine4
    no switchport
    ip address 10.2.0.14/31
