--- a/ceos-2dc-4s4l/configs/dc2-leaf3.cfg
+++ b/ceos-2dc-4s4l/configs/dc2-leaf3.cfg
@@ -43,21 +43,25 @@ interface Port-Channel14
    lacp system-id 0000.1014.4444
 !
 interface Ethernet1
+   mtu 9214
    description to-dc2-spine1
    no switchport
    ip address 10.2.0.16/31
 !
 interface Ethernet2
+   mtu 9214
    description to-dc2-spine2
    no switchport
    ip address 10.2.0.18/31
 !
 interface Ethernet3
+   mtu 9214
    description to-dc2-spine3
    no switchport
    ip address 10.2.0.20/31
 !
 interface Ethernet4
+   mtu 9214
    description to-dc2-spine4
    no switchport
    ip address 10.2.0.22/31
