--- a/ceos-2dc-4s4l/configs/dc2-spine4.cfg
+++ b/ceos-2dc-4s4l/configs/dc2-spine4.cfg
@@ -19,21 +19,25 @@ system l1
    unsupported error-correction action error
 !
 interface Ethernet1
+   mtu 9214
    description to-dc2-leaf1
    no switchport
    ip address 10.2.0.7/31
 !
 interface Ethernet2
+   mtu 9214
    description to-dc2-leaf2
    no switchport
    ip address 10.2.0.15/31
 !
 interface Ethernet3
+   mtu 9214
    description to-dc2-leaf3
    no switchport
    ip address 10.2.0.23/31
 !
 interface Ethernet4
+   mtu 9214
    description to-dc2-leaf4
    no switchport
    ip address 10.2.0.31/31
