Forcing MPLS LDP router-id to Loopback0

--- a/ceos-2dc-4s4l/configs/dc2-router1.cfg
+++ b/ceos-2dc-4s4l/configs/dc2-router1.cfg
@@ -85,7 +85,7 @@ ip routing vrf TENANT1
 mpls ip
 !
 mpls ldp
-   router-id interface Loopback0
+   router-id interface Loopback0 force
    transport-address interface Loopback0
    interface disabled default
    no shutdown
