Stop tracking __pycache__ files

--- a/.gitignore
+++ b/.gitignore
@@ -18,5 +18,23 @@ Thumbs.db
 *.pfx
 *.env
 
-# Private content
+# Python local env/cache
+automation/.venv/
+automation/src/**/__pycache__/
+**/__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.pytest_cache/
+automation/src/netlab_automation.egg-info/
+
+# netlab generated outputs
+automation/artifacts/
+automation/baselines/
+
+# optional coverage outputs
+.coverage
+htmlcov/
+
+# Not interesting
 agent/
