--- a/ceos-2dc-4s4l/intent/intent.yml
+++ b/ceos-2dc-4s4l/intent/intent.yml
@@ -1,46 +1,105 @@
-spines:
-  - dc1-spine1
-  - dc1-spine2
-  - dc1-spine3
-  - dc1-spine4
-  - dc2-spine1
-  - dc2-spine2
-  - dc2-spine3
-  - dc2-spine4
-leaves:
-  rackA: [dc1-leaf1, dc1-leaf2, dc2-leaf1, dc2-leaf2]
-  rackB: [dc1-leaf3, dc1-leaf4, dc2-leaf3, dc2-leaf4]
-hosts:
-  rackA: [dc1-host1, dc1-host2, dc2-host1, dc2-host2]
-  rackB: [dc1-host3, dc1-host4, dc2-host3, dc2-host4]
-
-tenant1:
-  vrf: TENANT1
-  vlan10:
-    vni: 10100
-    gw: 192.168.10.1/24
-  rackA_domain:
-    vlan: 20
-    subnet: 192.168.20.0/24
-    gw: 192.168.20.1/24
-    vni: 10200
-  rackB_domain:
-    vlan: 30
-    subnet: 192.168.30.0/24
-    gw: 192.168.30.1/24
-    vni: 10300
-  isolation:
-    type: l2
-    interface: bond0.20
+version: 1
 
 gnmi:
   port: 6030
   username: clab
   password: clab
 
-dci:
-  routers_dc1: [dc1-router1, dc1-router2]
-  routers_dc2: [dc2-router1, dc2-router2]
-  interdc_links:
-    - dc1-router1:eth3-dc2-router1:eth3
-    - dc1-router2:eth3-dc2-router2:eth3
+inventory:
+  nodes:
+    dc1-spine1: {kind: arista_ceos, roles: [eos, spine, dc1]}
+    dc1-spine2: {kind: arista_ceos, roles: [eos, spine, dc1]}
+    dc1-spine3: {kind: arista_ceos, roles: [eos, spine, dc1]}
+    dc1-spine4: {kind: arista_ceos, roles: [eos, spine, dc1]}
+    dc2-spine1: {kind: arista_ceos, roles: [eos, spine, dc2]}
+    dc2-spine2: {kind: arista_ceos, roles: [eos, spine, dc2]}
+    dc2-spine3: {kind: arista_ceos, roles: [eos, spine, dc2]}
+    dc2-spine4: {kind: arista_ceos, roles: [eos, spine, dc2]}
+    dc1-leaf1: {kind: arista_ceos, roles: [eos, leaf, dc1], groups: [dc1_rackA_leaf]}
+    dc1-leaf2: {kind: arista_ceos, roles: [eos, leaf, dc1], groups: [dc1_rackA_leaf]}
+    dc1-leaf3: {kind: arista_ceos, roles: [eos, leaf, dc1], groups: [dc1_rackB_leaf]}
+    dc1-leaf4: {kind: arista_ceos, roles: [eos, leaf, dc1], groups: [dc1_rackB_leaf]}
+    dc2-leaf1: {kind: arista_ceos, roles: [eos, leaf, dc2], groups: [dc2_rackA_leaf]}
+    dc2-leaf2: {kind: arista_ceos, roles: [eos, leaf, dc2], groups: [dc2_rackA_leaf]}
+    dc2-leaf3: {kind: arista_ceos, roles: [eos, leaf, dc2], groups: [dc2_rackB_leaf]}
+    dc2-leaf4: {kind: arista_ceos, roles: [eos, leaf, dc2], groups: [dc2_rackB_leaf]}
+    dc1-router1: {kind: arista_ceos, roles: [eos, router, dc1, dci_router]}
+    dc1-router2: {kind: arista_ceos, roles: [eos, router, dc1, dci_router]}
+    dc2-router1: {kind: arista_ceos, roles: [eos, router, dc2, dci_router]}
+    dc2-router2: {kind: arista_ceos, roles: [eos, router, dc2, dci_router]}
+    dc1-host1: {kind: linux, roles: [host, dc1], groups: [dc1_rackA_host]}
+    dc1-host2: {kind: linux, roles: [host, dc1], groups: [dc1_rackA_host]}
+    dc1-host3: {kind: linux, roles: [host, dc1], groups: [dc1_rackB_host]}
+    dc1-host4: {kind: linux, roles: [host, dc1], groups: [dc1_rackB_host]}
+    dc2-host1: {kind: linux, roles: [host, dc2], groups: [dc2_rackA_host]}
+    dc2-host2: {kind: linux, roles: [host, dc2], groups: [dc2_rackA_host]}
+    dc2-host3: {kind: linux, roles: [host, dc2], groups: [dc2_rackB_host]}
+    dc2-host4: {kind: linux, roles: [host, dc2], groups: [dc2_rackB_host]}
+
+services:
+  dci:
+    links:
+      - dc1-router1:eth3-dc2-router1:eth3
+      - dc1-router2:eth3-dc2-router2:eth3
+  tenant:
+    vrf: TENANT1
+    vlan10: {vni: 10100, gw: 192.168.10.1/24}
+
+checks:
+  - name: intent-vxlan-basics
+    phase: intent
+    kind: config_contains
+    params:
+      selector: {role: leaf}
+      required: ["interface Vxlan1", "interface Vlan10"]
+
+  - name: intent-dci-router-presence
+    phase: intent
+    kind: config_contains
+    params:
+      selector: {role: dci_router}
+      required: ["router bgp"]
+
+  - name: underlay-interfaces-up
+    phase: underlay
+    kind: interfaces_up
+    params:
+      selector: {role: eos}
+
+  - name: underlay-bgp-established
+    phase: underlay
+    kind: bgp_established
+    params:
+      selector: {role: eos}
+      min_total: 1
+      require_all: true
+
+  - name: controlplane-evpn-routes
+    phase: control-plane
+    kind: evpn_routes_present
+    params:
+      selector: {role: leaf}
+      patterns: ["mac-ip", "ip-prefix"]
+      require: any
+
+  - name: dataplane-vlan10-local-dc1
+    phase: dataplane
+    kind: ping_targets
+    params:
+      interface: bond0.10
+      probes:
+        - source: dc1-host1
+          targets: [192.168.10.12, 192.168.10.13, 192.168.10.14]
+        - source: dc1-host2
+          targets: [192.168.10.11, 192.168.10.13, 192.168.10.14]
+
+  - name: dataplane-vlan10-local-dc2
+    phase: dataplane
+    kind: ping_targets
+    params:
+      interface: bond0.10
+      probes:
+        - source: dc2-host1
+          targets: [192.168.10.22, 192.168.10.23, 192.168.10.24]
+        - source: dc2-host2
+          targets: [192.168.10.21, 192.168.10.23, 192.168.10.24]
