Improved underlay validation logic

--- a/ceos-2dc-4s4l/intent/intent.yml
+++ b/ceos-2dc-4s4l/intent/intent.yml
@@ -65,6 +65,7 @@ checks:
     kind: interfaces_up
     params:
       selector: {role: eos}
+      required_description_regex: ["^to-"]
 
   - name: underlay-bgp-established
     phase: underlay
