Modified Nokia SR-MPLS topology specs

--- a/nokia-sr-mpls/not-a-clab-topology.yml
+++ b/nokia-sr-mpls/not-a-clab-topology.yml
@@ -75,6 +75,44 @@
         type: "routed"
         ipv4: "172.17.1.5/30"
         ipv6: "2001:db8:b:1::5/126"
+  - name: "CPE-C1"
+    type: "nokia_srsim"
+    loopback: "172.18.255.1"
+    interfaces:
+      - intf: "loopback0"
+        description: "Loopback_interface"
+        type: "loopback"
+        ipv4: "172.18.255.1/32"
+        ipv6: "2001:db8:c:255::1/128"
+      - intf: "1/1/c1/1"
+        neighbor: "CSC2-PE1_1/1/c1/1"
+        description: "To_CSC2-PE1_1/1/c1/1"
+        type: "802.1q"
+        vlans: "10,20,30,40,50"
+      - intf: "1/1/c2/1"
+        description: "Stub_interface"
+        type: "routed"
+        ipv4: "172.18.0.1/30"
+        ipv6: "2001:db8:c:1::1/126"
+  - name: "CPE-C2"
+    type: "nokia_srsim"
+    loopback: "172.18.255.2"
+    interfaces:
+      - intf: "loopback0"
+        description: "Loopback_interface"
+        type: "loopback"
+        ipv4: "172.18.255.2/32"
+        ipv6: "2001:db8:c:255::2/128"
+      - intf: "1/1/c1/1"
+        neighbor: "CSC2-PE2_1/1/c1/1"
+        description: "To_CSC2-PE2_1/1/c1/1"
+        type: "802.1q"
+        vlans: "10,20,30,40,50"
+      - intf: "1/1/c2/1"
+        description: "Stub_interface"
+        type: "routed"
+        ipv4: "172.18.0.5/30"
+        ipv6: "2001:db8:c:1::5/126"
 
   - name: "NOC-R1"
     type: "nokia_srsim"
@@ -154,8 +192,8 @@
         ipv4: "100.65.255.12/32"
         ipv6: "2001:db8:65:255::12/128"
       - intf: "1/1/c1/1"
-        neighbor: "CPE-A2_1/1/c1/1"
-        description: "To_CPE-A2_1/1/c1/1"
+        neighbor: "CPE-B1_1/1/c1/1"
+        description: "To_CPE-B1_1/1/c1/1"
         type: "802.1q"
         vlans: "10,20,30,40,50"
       - intf: "1/1/c2/1"
