--- a/nokia-sr-mpls/nokia-sr-mpls-lab1-ipaddr.clab.yml
+++ b/nokia-sr-mpls/nokia-sr-mpls-lab1-ipaddr.clab.yml
@@ -67,6 +67,34 @@ topology:
             - slot: 1
               type: me12-100gb-qsfp28
 
+    CPE-C1:
+      kind: nokia_srsim
+      memory: 4GB
+      type: sr-1
+      mgmt-ipv4: 172.20.20.133
+      startup-config: ./configs/lab1-ipaddr/CPE-C1.partial.cfg
+      labels:
+        loopback-ipv4: "172.18.255.1/32"
+        loopback-ipv6: "2001:db8:c:255::1/128"
+      components:
+        - mda:
+            - slot: 1
+              type: me12-100gb-qsfp28
+
+    CPE-C2:
+      kind: nokia_srsim
+      memory: 4GB
+      type: sr-1
+      mgmt-ipv4: 172.20.20.134
+      startup-config: ./configs/lab1-ipaddr/CPE-C2.partial.cfg
+      labels:
+        loopback-ipv4: "172.18.255.2/32"
+        loopback-ipv6: "2001:db8:c:255::2/128"
+      components:
+        - mda:
+            - slot: 1
+              type: me12-100gb-qsfp28
+
     NOC-R1:
       kind: nokia_srsim
       memory: 4GB
@@ -464,6 +492,8 @@ topology:
     - endpoints: ["CPE-A2:1/1/c3/1", "PE3:1/1/c3/1"]
     - endpoints: ["CPE-B1:1/1/c1/1", "PE2:1/1/c1/1"]
     - endpoints: ["CPE-B2:1/1/c3/1", "PE4:1/1/c3/1"]
+    - endpoints: ["CPE-C1:1/1/c1/1", "CSC2-PE1:1/1/c1/1"]
+    - endpoints: ["CPE-C2:1/1/c1/1", "CSC2-PE2:1/1/c1/1"]
     - endpoints: ["NOC-R1:1/1/c5/1", "PE2:1/1/c5/1"]
     - endpoints: ["NOC-R2:1/1/c5/1", "PE4:1/1/c5/1"]
     - endpoints: ["PE1:1/1/c2/1", "P2:1/1/c2/1"]
